package com.digitalhospital.model;

public enum StatutConsultation {
    RESERVEE,
    VALIDEE,
    ANNULEE,
    TERMINEE
}